@@ -1,5 +1,23 @@
 " Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution "
 
 Boolean < #False
-- and: alternativeBlock
-    ^ self
+- and: aBlock
+    ^ self.
+
+- or: aBlock
+    ^ aBlock.
+
+- ifFalse: aBlock
+    ^ aBlock.
+
+- ifTrue: aBlock
+    ^ nil.
+
+- ifFalse: falseBlock ifTrue: trueBlock
+    ^ falseBlock.
+
+- ifTrue: trueBlock ifFalse: falseBlock
+    ^ falseBlock.
+
+- not
+    ^ true.
