@@ -1,6 +1,7 @@
 " Redline Smalltalk, Copyright (c) James C. Ladd. All rights reserved. See LICENSE in the root of this distribution "
 
 Object < #Magnitude
+"comparing"
 - < aMagnitude
     self subclassResponsibility.
 
@@ -18,3 +19,10 @@ Object < #Magnitude
 
 - between: min and: max
     ^ self >= min and: [self <= max].
+
+"testing"
+- min: aMagnitude
+    self < aMagnitude ifTrue: [ ^ self ] ifFalse: [ ^ aMagnitude ].
+
+- max: aMagnitude
+    self \> aMagnitude ifTrue: [ ^ self ] ifFalse: [ ^ aMagnitude ].
