@@ -2,4 +2,22 @@
 
 Boolean < #True
 - and: alternativeBlock
-    ^ alternativeBlock
+    ^ alternativeBlock.
+
+- or: aBlock
+    ^ self.
+
+- ifFalse: aBlock
+    ^ nil.
+
+- ifTrue: aBlock
+    ^ aBlock.
+
+- ifFalse: falseBlock ifTrue: trueBlock
+    ^ trueBlock.
+
+- ifTrue: trueBlock ifFalse: falseBlock
+    ^ trueBlock.
+
+- not
+    ^ false.
