@@ -1,0 +1,7 @@
+true ifTrue: [ Transcript show: 'Truth'. ] ifFalse: [ Transcript show: 'False'. ].
+
+Transcript cr; cr.
+
+false ifTrue: [ Transcript show: 'Truth'. ] ifFalse: [ Transcript show: 'False'. ].
+
+Transcript cr; cr.
