@@ -19,3 +19,5 @@
 2 >= 1.
 
 1 between: 0 and: 3.
+
+1 max: 2.
